[gd_scene load_steps=3 format=3 uid="uid://hj2e2orvfptj"]

[ext_resource type="Script" path="res://MainMenu/mainMenuBido.gd" id="1_lcq2t"]
[ext_resource type="FontFile" uid="uid://2j4nwscbemuo" path="res://Art/Font/Adventurer (1).ttf" id="2_xn16f"]

[node name="mainMenuBido" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lcq2t")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1276.0
offset_bottom = 719.0
color = Color(0.764706, 0.423529, 0.478431, 1)

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -32.0
offset_right = 152.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xn16f")
theme_override_font_sizes/font_size = 40
text = "Start
"
flat = true

[node name="OptionsButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xn16f")
theme_override_font_sizes/font_size = 40
text = "Options"
flat = true

[node name="ExitButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xn16f")
theme_override_font_sizes/font_size = 40
text = "Exit
"
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.5
offset_top = -107.5
offset_right = 142.5
offset_bottom = 107.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/Title"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xn16f")
theme_override_font_sizes/font_size = 70
text = "HexFlash"

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Buttons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="button_down" from="Buttons/ExitButton" to="." method="_on_exit_button_button_down"]
